--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,7 +10,9 @@
         android:label="SplashFragment" >
         <action
             android:id="@+id/action_splashFragment_to_viewOptionFragment"
-            app:destination="@id/viewOptionFragment" />
+            app:destination="@id/viewOptionFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/viewOptionFragment"
