--- a/app/src/main/res/navigation/simple_nav_view.xml
+++ b/app/src/main/res/navigation/simple_nav_view.xml
@@ -7,9 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.bizzmanweb.handigoodman.simpleView.ui.home.HomeFragment"
+        android:name="com.bizzmanweb.handigoodman.simpleView.ui.home.ui.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_bookingAddressFragment"
+            app:destination="@id/bookingAddressFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
@@ -22,4 +26,9 @@
         android:name="com.bizzmanweb.handigoodman.simpleView.ui.calendar.CalendarFragment"
         android:label="@string/calendar"
         tools:layout="@layout/fragment_calendar" />
+    <fragment
+        android:id="@+id/bookingAddressFragment"
+        android:name="com.bizzmanweb.handigoodman.simpleView.ui.bookingAddress.BookingAddressFragment"
+        android:label="BookingAddressFragment"
+        tools:layout="@layout/fragment_booking_address"/>
 </navigation>
