--- a/app/src/main/res/layout/fragment_booking_address.xml
+++ b/app/src/main/res/layout/fragment_booking_address.xml
@@ -1,173 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="@color/white">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:fillViewport="true">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:layout_margin="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/smallHeaderLayout" />
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/submitBtn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/open_sans"
-            android:letterSpacing="0.12"
-            android:paddingVertical="14dp"
-            android:text="@string/submit"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:backgroundTint="@color/purple_500"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/description"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="@+id/description"
-            app:layout_constraintTop_toBottomOf="@+id/description"
-            app:shapeAppearance="@style/Theme.AppButton" />
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
+                android:layout_margin="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/smallHeaderLayout" />
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/dotsLayout"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintBottom_toBottomOf="@+id/viewPager"
+                app:layout_constraintEnd_toEndOf="@+id/viewPager"
+                app:layout_constraintStart_toStartOf="@+id/viewPager" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/emailText"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="34dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_input"
-            android:drawablePadding="6dp"
-            android:drawableStart="@drawable/email"
-            android:fontFamily="@font/open_sans"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:paddingHorizontal="20dp"
-            android:singleLine="true"
-            android:textAppearance="@style/Theme.AppButton"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textFontWeight="500"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameText" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/submitBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
+                android:letterSpacing="0.12"
+                android:onClick="@{()-> listener.onSubmitBtnClick()}"
+                android:paddingVertical="14dp"
+                android:text="@string/submit"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:backgroundTint="@color/purple_500"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/description"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="@+id/description"
+                app:layout_constraintTop_toBottomOf="@+id/description"
+                app:shapeAppearance="@style/Theme.AppButton" />
 
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/phoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="34dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_input"
-            android:drawablePadding="6dp"
-            android:drawableStart="@drawable/call"
-            android:fontFamily="@font/open_sans"
-            android:hint="@string/phone_number"
-            android:inputType="phone"
-            android:paddingHorizontal="20dp"
-            android:singleLine="true"
-            android:textAppearance="@style/Theme.AppButton"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textFontWeight="500"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/location"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailText" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/emailText"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input"
+                android:drawablePadding="6dp"
+                android:drawableStart="@drawable/email"
+                android:fontFamily="@font/open_sans"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="20dp"
+                android:singleLine="true"
+                android:textAppearance="@style/Theme.AppButton"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textFontWeight="500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/location"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="34dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_input"
-            android:drawablePadding="6dp"
-            android:drawableStart="@drawable/location"
-            android:fontFamily="@font/open_sans"
-            android:hint="@string/location"
-            android:inputType="textEmailAddress"
-            android:paddingHorizontal="20dp"
-            android:singleLine="true"
-            android:textAppearance="@style/Theme.AppButton"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textFontWeight="500"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/description"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="34dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_input"
-            android:drawablePadding="6dp"
-            android:fontFamily="@font/open_sans"
-            android:hint="Description"
-            android:inputType="textEmailAddress"
-            android:minHeight="50dp"
-            android:paddingHorizontal="20dp"
-            android:textAppearance="@style/Theme.AppButton"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textFontWeight="500"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/submitBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/location" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input"
+                android:drawablePadding="6dp"
+                android:drawableStart="@drawable/call"
+                android:fontFamily="@font/open_sans"
+                android:hint="@string/phone_number"
+                android:inputType="phone"
+                android:paddingHorizontal="20dp"
+                android:singleLine="true"
+                android:textAppearance="@style/Theme.AppButton"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textFontWeight="500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/location"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nameText"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="34dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_input"
-            android:drawablePadding="6dp"
-            android:drawableStart="@drawable/man"
-            android:fontFamily="@font/open_sans"
-            android:hint="@string/name"
-            android:paddingHorizontal="20dp"
-            android:singleLine="true"
-            android:textAppearance="@style/Theme.AppButton"
-            android:textColor="@color/black"
-            android:textColorHint="@android:color/darker_gray"
-            android:textFontWeight="500"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/emailText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input"
+                android:drawablePadding="6dp"
+                android:drawableStart="@drawable/location"
+                android:fontFamily="@font/open_sans"
+                android:hint="@string/location"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="20dp"
+                android:singleLine="true"
+                android:textAppearance="@style/Theme.AppButton"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textFontWeight="500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/description"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
-        <include
-            android:id="@+id/smallHeaderLayout"
-            layout="@layout/app_small_header"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input"
+                android:drawablePadding="6dp"
+                android:fontFamily="@font/open_sans"
+                android:hint="Description"
+                android:inputType="textEmailAddress"
+                android:minHeight="50dp"
+                android:paddingHorizontal="20dp"
+                android:textAppearance="@style/Theme.AppButton"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textFontWeight="500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/submitBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/location" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/nameText"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input"
+                android:drawablePadding="6dp"
+                android:drawableStart="@drawable/man"
+                android:fontFamily="@font/open_sans"
+                android:hint="@string/name"
+                android:paddingHorizontal="20dp"
+                android:singleLine="true"
+                android:textAppearance="@style/Theme.AppButton"
+                android:textColor="@color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textFontWeight="500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/emailText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+
+            <include
+                android:id="@+id/smallHeaderLayout"
+                layout="@layout/app_small_header"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+    <data>
+
+        <variable
+            name="listener"
+            type="com.bizzmanweb.handigoodman.simpleView.ui.bookingAddress.ui.BookingAddressPageClickListener" />
+    </data>
+</layout>
