--- a/app/src/main/res/layout/fragment_optimize_home.xml
+++ b/app/src/main/res/layout/fragment_optimize_home.xml
@@ -1,28 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include
-        android:id="@+id/headerLayout"
-        layout="@layout/optimize_view_header"/>
+    <data>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_marginTop="12dp"
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="145dp"
-        android:id="@+id/viewPager"
-        app:layout_constraintTop_toBottomOf="@id/headerLayout"/>
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-    <include
-        android:id="@+id/storeLayout"
-        layout="@layout/store_optimize_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/viewPager"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintTop_toBottomOf="@id/headerLayout" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/layoutDots"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="6dp"
+                app:layout_constraintBottom_toBottomOf="@+id/viewPager"
+                app:layout_constraintEnd_toEndOf="@+id/viewPager"
+                app:layout_constraintStart_toStartOf="@+id/viewPager" />
+
+            <include
+                android:id="@+id/headerLayout"
+                layout="@layout/optimize_view_header" />
+
+            <include
+                android:id="@+id/storeLayout"
+                layout="@layout/store_optimize_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/viewPager" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/serviceText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:text="@string/services"
+                android:textColor="@color/text_black"
+                android:textSize="18sp"
+                app:fontFamily="@font/open_sans"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/storeLayout" />
+
+            <include
+                android:id="@+id/optimizeViewServiceLayout"
+                layout="@layout/service_optimize_view"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/offerLayout"
+                app:layout_constraintTop_toBottomOf="@id/serviceText" />
+
+            <include
+                android:id="@+id/offerLayout"
+                layout="@layout/optimize_view_offer_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="0dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
