--- a/app/src/main/res/layout/service_optimize_view.xml
+++ b/app/src/main/res/layout/service_optimize_view.xml
@@ -1,199 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#F3F1F1">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <View
-        android:id="@+id/horizontalFirstLine"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="#c4c4c4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="listener"
+            type="com.bizzmanweb.handigoodman.optimizeView.ui.optimizeHome.ServiceChooseListener" />
+    </data>
 
-    <View
-        android:id="@+id/verticalLine1"
-        android:layout_width="2dp"
-        android:layout_height="0dp"
-        android:background="#c4c4c4"
-        app:layout_constraintBaseline_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#c4c4c4">
 
-    <View
-        android:id="@+id/verticalLine2"
-        android:layout_width="2dp"
-        android:layout_height="0dp"
-        android:background="#c4c4c4"
-        app:layout_constraintBaseline_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/verticalLine1"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/drillingBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/horizontalFirstLine"
-        app:layout_constraintStart_toEndOf="@+id/verticalLine2"
-        app:layout_constraintTop_toBottomOf="@+id/plumbingBox" >
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+        <LinearLayout
+            android:id="@+id/wallMountingBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:layout_marginStart="4dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
+            app:layout_constraintStart_toEndOf="@+id/tvInstallatoinBox"
+            app:layout_constraintTop_toBottomOf="@+id/furnitureAssembleBox">
 
-    <LinearLayout
-        android:id="@+id/wallMountingBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
-        app:layout_constraintStart_toEndOf="@+id/verticalLine1"
-        app:layout_constraintTop_toBottomOf="@+id/furnitureAssembleBox">
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/hang_mirror_21" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text="Wall mounting Service"
+                android:textColor="@color/text_black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tvInstallatoinBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </LinearLayout>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/verticalLine1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/doorRepearBox">
 
-    <LinearLayout
-        android:id="@+id/tvInstallatoinBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/verticalLine1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/doorRepearBox">
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/hang_mirror_5" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text="TV Bracket Installation"
+                android:textColor="@color/text_black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/plumbingBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </LinearLayout>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/horizontalFirstLine"
+            app:layout_constraintEnd_toEndOf="@+id/horizontalFirstLine"
+            app:layout_constraintStart_toEndOf="@+id/furnitureAssembleBox"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:id="@+id/plumbingBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/furnitureAssembleBox"
-        app:layout_constraintEnd_toEndOf="@+id/horizontalFirstLine"
-        app:layout_constraintStart_toEndOf="@+id/furnitureAssembleBox"
-        app:layout_constraintTop_toTopOf="parent">
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/cabinet_hinge_1" />
 
-        <com.google.android.material.textview.MaterialTextView
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text="Plumbing"
+                android:textColor="@color/text_black" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/horizontalFirstLine"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+            android:layout_height="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/verticalLine1"
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBaseline_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/verticalLine2"
+            android:layout_width="2dp"
+            android:layout_height="0dp"
+            app:layout_constraintBaseline_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/verticalLine1"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/drillingBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </LinearLayout>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/horizontalFirstLine"
+            app:layout_constraintStart_toEndOf="@+id/wallMountingBox"
+            app:layout_constraintTop_toBottomOf="@+id/plumbingBox">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/furnitureAssembleBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalFirstLine"
-        app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
-        app:layout_constraintStart_toEndOf="@+id/doorRepearBox"
-        app:layout_constraintTop_toTopOf="parent">
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/hang_mirror_22" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text="Drilling Service"
+                android:textColor="@color/text_black" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/furnitureAssembleBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/horizontalFirstLine"
+            app:layout_constraintEnd_toStartOf="@+id/verticalLine2"
+            app:layout_constraintStart_toEndOf="@+id/doorRepearBox"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/doorRepearBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#F3F1F1"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalFirstLine"
-        app:layout_constraintEnd_toStartOf="@+id/verticalLine1"
-        app:layout_constraintStart_toStartOf="@+id/horizontalFirstLine"
-        app:layout_constraintTop_toTopOf="parent">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/storage_furniture_assemble" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/door_lock_1" />
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text=" Furniture Assembly"
+                android:textColor="@color/text_black" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/open_sans"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/doorRepearBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="2dp"
+            android:background="#F3F1F1"
             android:gravity="center"
-            android:text=" Door Repear"
-            android:textColor="@color/text_black" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:onClick="@{()-> listener.onServiceClick()}"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/horizontalFirstLine"
+            app:layout_constraintEnd_toStartOf="@+id/verticalLine1"
+            app:layout_constraintStart_toStartOf="@+id/horizontalFirstLine"
+            app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/gatelock_1" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text=" Door Repear"
+                android:textColor="@color/text_black" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
